--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+@import url("https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;900&display=swap");
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
@@ -408,17 +409,67 @@ input, select {
 
 * {
   box-sizing: border-box;
+  font-family: "Urbanist", sans-serif;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.flex {
+  display: flex;
 }
 
 .container {
-  max-width: 1140px;
+  max-width: 1320px;
   margin: 0 auto;
 }
 
 .main-section {
   position: relative;
-  padding-top: 15px;
+  padding: 35px 60px 125px;
   min-height: 800px;
   background: #adaabf;
   overflow: hidden;
+}
+
+.content {
+  position: relative;
+  z-index: 1;
+}
+.content__image {
+  position: absolute;
+  z-index: 0;
+  right: -300px;
+  top: 120px;
+}
+.content .cards {
+  padding-top: 140px;
+  margin-bottom: 90px;
+}
+.content .cards__list {
+  padding-left: 60px;
+  padding-right: 60px;
+  justify-content: space-between;
+}
+.content .cards__items {
+  min-width: 200px;
+  min-height: 234px;
+  justify-content: center;
+  align-items: center;
+  background-color: #519872;
+  border-radius: 15px;
+  filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.25));
+}
+.content .cards__text {
+  font-size: 32px;
+  line-height: 38px;
+  text-align: center;
+  font-weight: 600;
+  color: white;
 }/*# sourceMappingURL=style.css.map */
