--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,9 +1,19 @@
 //Import
 @import "normilized.scss"
 @import "reset.scss"
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;900&display=swap')
+
 
 *
   box-sizing: border-box
+  font-family: 'Urbanist', sans-serif
+
+ul
+  list-style: none
+
+a
+  text-decoration: none
+  color: black
 
 $color-sand: #ceb5a7
 $color-late: #92828d
@@ -11,14 +21,54 @@ $color-green: #519872
 $color-lilac: #adaabf
 $color-vine: #3b252c
 
+.flex
+  display: flex
+
 .container
-  max-width: 1140px
+  max-width: 1320px
   margin: 0 auto
 
 .main-section
   position: relative
-  padding-top: 15px
+  padding: 35px 60px 125px
   min-height: 800px
   background: $color-lilac
   overflow: hidden
+
+.content
+  position: relative
+  z-index: 1
+  &__image
+    position: absolute
+    z-index: 0
+    right: -300px
+    top: 120px
+
+  .cards
+    padding-top: 140px
+    margin-bottom: 90px
+    &__list
+      padding-left: 60px
+      padding-right: 60px
+      justify-content: space-between
+    &__items
+      min-width: 200px
+      min-height: 234px
+      justify-content: center
+      align-items: center
+      background-color: $color-green
+      border-radius: 15px
+      filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.25))
+    &__text
+      font-size: 32px
+      line-height: 38px
+      text-align: center
+      font-weight: 600
+      color: white
+
+
+
+
+
+
 
