--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,6 +8,7 @@
   box-sizing: border-box
   font-family: 'Urbanist', sans-serif
 
+
 ul
   list-style: none
 
@@ -30,9 +31,11 @@ $color-vine: #3b252c
 
 .main-section
   position: relative
-  padding: 35px 60px 125px
+  padding: 35px 60px
+  padding-bottom: 0
+  height: 1024px
   min-height: 800px
-  background: $color-lilac
+  background: #E6E6E6
   overflow: hidden
 
 .content
@@ -41,30 +44,53 @@ $color-vine: #3b252c
   &__image
     position: absolute
     z-index: 0
-    right: -300px
-    top: 120px
-
+    left: 85%
+    bottom: -130%
   .cards
     padding-top: 140px
     margin-bottom: 90px
+    animation: backInUp
+    animation-duration: 1s
     &__list
       padding-left: 60px
       padding-right: 60px
       justify-content: space-between
+      margin-bottom: 90px
     &__items
       min-width: 200px
       min-height: 234px
-      justify-content: center
-      align-items: center
       background-color: $color-green
       border-radius: 15px
-      filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.25))
+      filter: drop-shadow(6px 6px 6px $color-lilac)
     &__text
       font-size: 32px
       line-height: 38px
       text-align: center
       font-weight: 600
       color: white
+    &__link
+      position: absolute
+      top: 0
+      left: 0
+      right: 0
+      bottom: 0
+      z-index: 2
+      align-items: center
+      justify-content: center
+
+.contact-section
+  &__title
+    text-align: center
+    font-style: normal
+    font-weight: 900
+    font-size: 36px
+    line-height: 43px
+    margin-bottom: 60px
+  &__socials
+    justify-content: center
+
+
+
 
 
 
